methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:19: error: not found: type color
def flower(c:color){
             ^