methods.flowerpot.FlowerPot.scala.code
def growFlowers(){
  flower(Color.red)
  forward(4)
  flower(Color.cyan)
  backward(2)
  right()
  forward(2)
  left()
  flower(Color.orange)
  right()
  forward(2)
  left()
  forward(2)
  flower(Color.green)
  backward(4)
  flower(Color.pink) 
}

def flower(c:color){
	setBrushColor(c)
  brushDown()
  forward()
  left()
  forward()
  backward(2)
  forward()
  right()
  forward()
  backward()
  setBrushColor(Color.yellow)
  brushUp()
  backward()
}